# oss-fuzz-vulns

./: README.md
infra/: pyproject.toml
infra/syncer/: sync.py
infra/syncer/google_issue_tracker/: __init__.py  client.py  issue_tracker.py
scripts/: import.py
vulns/antlr4-java/: OSV-2022-667.yaml
vulns/apache-commons/: OSV-2021-882.yaml
vulns/apache-commons-codec/: OSV-2023-1195.yaml  OSV-2024-349.yaml
vulns/apache-commons-configuration/: OSV-2022-871.yaml  OSV-2024-1102.yaml  OSV-2024-269.yaml
vulns/apache-commons-imaging/: OSV-2022-1207.yaml  OSV-2022-1275.yaml
vulns/apache-commons-io/: OSV-2023-618.yaml  OSV-2023-962.yaml
vulns/apache-commons-jxpath/: OSV-2022-729.yaml  OSV-2022-743.yaml  OSV-2022-764.yaml  OSV-2022-768.yaml  OSV-2022-782.yaml  OSV-2023-719.yaml
vulns/apache-commons-lang/: OSV-2023-1221.yaml  OSV-2023-1326.yaml
vulns/apache-httpd/: OSV-2021-1104.yaml  OSV-2021-1577.yaml  OSV-2021-1679.yaml  OSV-2022-17.yaml
vulns/apache-logging-log4cxx/: OSV-2026-853.yaml
vulns/apache-poi/: OSV-2023-1024.yaml  OSV-2023-1136.yaml  OSV-2023-1265.yaml  OSV-2023-1266.yaml  OSV-2023-1291.yaml  OSV-2023-1353.yaml  OSV-2023-660.yaml  OSV-2023-662.yaml  OSV-2023-665.yaml  OSV-2023-680.yaml  OSV-2023-714.yaml  OSV-2023-795.yaml  OSV-2023-955.yaml  OSV-2023-961.yaml  OSV-2024-1423.yaml  OSV-2024-28.yaml  OSV-2024-372.yaml  OSV-2024-661.yaml  OSV-2024-879.yaml  OSV-2024-939.yaml  OSV-2025-1061.yaml  OSV-2025-45.yaml  OSV-2026-177.yaml  OSV-2026-297.yaml  OSV-2026-86.yaml  OSV-2026-87.yaml
vulns/arduinojson/: OSV-2020-1573.yaml  OSV-2024-555.yaml
(+3953 files in other folders)
